updates finales para entrega

--- a/index.html
+++ b/index.html
@@ -78,21 +78,21 @@
             <img
               class="img-galeria"
               src="assets/img/torta1-1.jpg"
-              alt="imagen"
+              alt="torta con oreos"
             />
           </div>
           <div class="col-xs-12 col-md-4 d-flex justify-content-center">
             <img
               class="img-galeria"
               src="assets/img/torta1-2.jpeg"
-              alt="imagen"
+              alt="tortas decoradas"
             />
           </div>
           <div class="col-xs-12 col-md-4 d-flex justify-content-center">
             <img
               class="img-galeria"
               src="assets/img/torta1-3.jpeg"
-              alt="imagen"
+              alt="torta con frutillas"
             />
           </div>
         </div>
@@ -101,21 +101,21 @@
             <img
               class="img-galeria"
               src="assets/img/torta2-1.jpeg"
-              alt="imagen"
+              alt="pan dulce decorado"
             />
           </div>
           <div class="col-xs-12 col-md-4 d-flex justify-content-center">
             <img
               class="img-galeria"
               src="assets/img/torta2-2.jpeg"
-              alt="imagen"
+              alt="tarta de manzana"
             />
           </div>
           <div class="col-xs-12 col-md-4 d-flex justify-content-center">
             <img
               class="img-galeria"
               src="assets/img/torta2-3.jpeg"
-              alt="imagen"
+              alt="torta de cumpleaños"
             />
           </div>
         </div>
