--- a/pages/pasteleria.html
+++ b/pages/pasteleria.html
@@ -4,19 +4,24 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="../assets/img/logo.ico"
+    />
     <link rel="stylesheet" href="../css/animate.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap"
-    rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap"
+      rel="stylesheet"
     />
     <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-    integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
-    crossorigin="anonymous"
-    referrerpolicy="no-referrer"
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+      integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="../css/estilo.css" />
     <title>SugarBowl Cocina| Pasteleria</title>
@@ -117,7 +122,8 @@
           </div>
           <div class="col-md-3 d-flex justify-content-center">
             <p>
-              <strong>Choco Mousse</strong> Base de brownie y mousse de chocolate, decorada con dulce de leche y almendras tostadas 
+              <strong>Choco Mousse</strong> Base de brownie y mousse de
+              chocolate, decorada con dulce de leche y almendras tostadas
             </p>
           </div>
           <div class="col-md-3"></div>
@@ -171,7 +177,7 @@
     ></script>
     <script src="../js/wow.min.js"></script>
     <script>
-    new WOW().init();
+      new WOW().init();
     </script>
   </body>
 </html>
